minor error fix (client_id)

--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,7 @@ This shows how easy it is to use Foursquare APIv2 via the OAuth2 gem.
     require 'net/https'
 
     # set on https://foursquare.com/oauth/
-    CLIENT_ID = your_client_secret 
+    CLIENT_ID = your_client_id 
     CLIENT_SECRET = your_client_secret
     CALLBACK_URL = '/auth/foursquare/callback'
 
