updated readme again

--- a/README.rdoc
+++ b/README.rdoc
@@ -9,17 +9,17 @@ This shows how easy it is to use Foursquare APIv2 via the OAuth2 gem.
     require 'json'
     require 'net/https'
 
-    # set on https://foursquare.com/oauth/
-    CLIENT_ID = your_client_id 
+    # as found on https://foursquare.com/oauth/
+    CLIENT_ID = your_client_id
     CLIENT_SECRET = your_client_secret
-    CALLBACK_URL = '/auth/foursquare/callback'
+    CALLBACK_PATH = '/auth/foursquare/callback'
 
     def client
         OAuth2::Client.new(CLIENT_ID, CLIENT_SECRET, 
           :site => ' http://foursquare.com/v2/',
           :request_token_path => "/oauth2/request_token",
           :access_token_path  => "/oauth2/access_token",
-          :authorize_path     => "/oauth2/authorize?response_type=code",
+          :authorize_path     => "/oauth2/authenticate?response_type=code",
           :parse_json => true
         )
     end
@@ -46,13 +46,11 @@ This shows how easy it is to use Foursquare APIv2 via the OAuth2 gem.
 
     def redirect_uri()
       uri = URI.parse(request.url)
-      uri.path = CALLBACK_URL
+      uri.path = CALLBACK_PATH
       uri.query = nil
       uri.to_s
     end
 
-    # ---------------
     get '/' do
       redirect client.web_server.authorize_url(:redirect_uri => redirect_uri)
     end
-    
